<?xml version="1.0" encoding="utf-8"  ?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/welcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:text="@string/WelcomeText"
      android:textAlignment="center"
      android:textSize="14pt"
      android:textStyle="bold"
      />

  <TextView
      android:id="@+id/intro_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:text="@string/searchmoviesinstructions"
      android:textAlignment="center"
      android:textSize="12pt"
      android:textStyle="italic"
      />

  <EditText
      android:id="@+id/text_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="25dp"
      android:layout_marginTop="25dp"
      android:inputType="text"
      />

  <Button
      android:id="@+id/search_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/lookupmoviesBtn"
      />

</LinearLayout>
