<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linear_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:orientation="vertical">

  <TextView android:id="@+id/movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:textStyle="bold"

  />
  <TextView android:id="@+id/intro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moviesoundtrackTitle"
            android:layout_marginTop="25dp"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="14pt"
            android:textStyle="bold"/>

  <ListView
      android:id="@+id/soundtrack_list_view"
      android:layout_height="match_parent"
      android:layout_width="match_parent">
  </ListView>

</LinearLayout>



